tests/http/snapshots/http__v2_logs__empty_text.snap
---
source: tests/http/v2_logs.rs
expression: "get(format!(\"{CHANNEL_LOGS}?{empty}&format={format}\")).send().await"
---
GET /api/v2/channels/11111/logs?from=2020-01-01T00:00:00Z&to=2020-01-02T00:00:00Z&format=text
status: 200 OK
content-type: text/plain; charset=utf-8
cache-control: no-cache
---
